# ktimer

./: .arcconfig  .craft.ini  .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  Mainpage.dox  Makefile.am  Messages.sh  config-ktimer.h.cmake  config-ktimer.h.in  ktimer.cpp  ktimer.desktop  ktimer.h  main.cpp  org.kde.ktimer.appdata.xml  org.kde.ktimer.desktop  prefwidget.ui  snapcraft.yaml
doc/: CMakeLists.txt  index.docbook
icons/: CMakeLists.txt
po/af/: ktimer.po
po/ar/: ktimer.po
po/ast/: ktimer.po
po/be/: ktimer.po
po/bg/: ktimer.po
po/br/: ktimer.po
po/bs/: ktimer.po
po/ca/: ktimer.po
po/ca/docs/ktimer/: index.docbook
po/ca@valencia/: ktimer.po
po/cs/: ktimer.po
po/cs/docs/ktimer/: index.docbook
po/cy/: ktimer.po
po/da/: ktimer.po
po/de/: ktimer.po
po/de/docs/ktimer/: index.docbook
po/el/: ktimer.po
po/en_GB/: ktimer.po
po/eo/: ktimer.po
po/es/: ktimer.po
po/es/docs/ktimer/: index.docbook
po/et/: ktimer.po
po/et/docs/ktimer/: index.docbook
po/eu/: ktimer.po
po/fa/: ktimer.po
po/fi/: ktimer.po
po/fr/: ktimer.po
po/fr/docs/ktimer/: index.docbook
po/ga/: ktimer.po
po/gl/: ktimer.po
po/he/: ktimer.po
po/hi/: ktimer.po
po/hne/: ktimer.po
po/hr/: ktimer.po
po/hu/: ktimer.po
po/ia/: ktimer.po
po/id/: ktimer.po
po/is/: ktimer.po
po/it/: ktimer.po
po/it/docs/ktimer/: index.docbook
po/ja/: ktimer.po
po/ka/: ktimer.po
po/kk/: ktimer.po
po/km/: ktimer.po
po/ko/: ktimer.po
po/lt/: ktimer.po
po/lv/: ktimer.po
po/mk/: ktimer.po
po/mr/: ktimer.po
po/ms/: ktimer.po
po/nb/: ktimer.po
po/nds/: ktimer.po
po/ne/: ktimer.po
po/nl/: ktimer.po
po/nl/docs/ktimer/: index.docbook
po/nn/: ktimer.po
po/oc/: ktimer.po
po/pa/: ktimer.po
po/pl/: ktimer.po
po/pt/: ktimer.po
po/pt/docs/ktimer/: index.docbook
po/pt_BR/: ktimer.po
po/pt_BR/docs/ktimer/: index.docbook
po/ro/: ktimer.po
po/ru/: ktimer.po
po/ru/docs/ktimer/: index.docbook
po/sa/: ktimer.po
po/se/: ktimer.po
po/sk/: ktimer.po
po/sl/: ktimer.po
po/sl/docs/ktimer/: index.docbook
po/sq/: ktimer.po
po/sr/: ktimer.po
po/sr/docs/ktimer/: index.docbook  l10n-track
po/sr@ijekavian/: ktimer.po
po/sr@ijekavianlatin/: ktimer.po
po/sr@latin/: ktimer.po
po/sr@latin/docs/ktimer/: index.docbook
po/sv/: ktimer.po
po/sv/docs/ktimer/: index.docbook
po/ta/: ktimer.po
po/tg/: ktimer.po
po/th/: ktimer.po
po/tr/: ktimer.po
po/tr/docs/ktimer/: index.docbook
po/ug/: ktimer.po
po/uk/: ktimer.po
po/uk/docs/ktimer/: index.docbook
po/vi/: ktimer.po
po/xh/: ktimer.po
po/zh_CN/: ktimer.po
po/zh_TW/: ktimer.po
src/: CMakeLists.txt  ktimer.cpp  ktimer.h  ktimerjob.cpp  ktimerjob.h  ktimermodel.cpp  ktimermodel.h  main.cpp  prefwidget.ui
src/qml/: CMakeLists.txt  Main.qml  TimerJobDelegate.qml  qml.qrc
